# MDP

./: .gitignore  .gitmodules
env_instr/: env_setup.md  environment_base.yml  environment_ros.yml  full_setup.md  new_setup_instr.md  run.md  setup.md
mdp_ws/: Makefile
mdp_ws/src/mdp_launch/: CMakeLists.txt  package.xml
mdp_ws/src/mdp_launch/launch/: sim_full.launch.py
mdp_ws/src/mdp_launch/rviz/: mdp.rviz
mdp_ws/src/mdp_perception/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mdp_ws/src/mdp_perception/config/: obstacle_detector.yml  perception.yml
mdp_ws/src/mdp_perception/include/mdp_perception/: apriltag_detector_node.hpp
mdp_ws/src/mdp_perception/launch/: detector.launch.py  perception.launch.py
mdp_ws/src/mdp_perception/mdp_perception/: apriltag_detector_node.py  object_detector_node.py  yolo_inference.py
mdp_ws/src/mdp_perception/src/: apriltag_detector_node.cpp  apriltag_detector_node_main.cpp  minimal_cpp_node.cpp
mdp_ws/src/mdp_worlds/: CMakeLists.txt
mdp_ws/src/mdp_worlds/mdp_worlds/: spawn_environment.py
mdp_ws/src/mdp_worlds/worlds/: demo.world  greenhouse.world
notes/: noise_estimation_process.md  notes.md
